--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -14,7 +14,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 <ul>
 	{
 		editHref && (
-			<li class={`heading-link depth-2`}>
+			<li class={`heading-link`}>
 				<a class='edit-on-github' href={editHref} target='_blank'>
 					<svg
 						aria-hidden='true'
@@ -40,7 +40,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 	}
 	{
 		CONFIG.COMMUNITY_INVITE_URL && (
-			<li class={`heading-link depth-2`}>
+			<li class={`heading-link`}>
 				<a href={CONFIG.COMMUNITY_INVITE_URL} target='_blank'>
 					<svg
 						aria-hidden='true'
@@ -62,7 +62,7 @@ const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 					<span>Contribute to the project</span>
 				</a>
 				</li>
-				<li class={`heading-link depth-2 git-btn`}>
+				<li class={`heading-link git-btn`}>
 					<GitHubStarLink />
 				</li>
 		)
