Feat: change font
ReemKufiInk font is not easy to read

--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -24,7 +24,6 @@ import { GitStarPromoSection } from './Promo/GitStarPromoSection/GitStarPromoSec
 	h2 {
 		text-align: center;
 		z-index: var(--z-elevated);
-		font-family: 'Inter', sans-serif;
 		font-size: clamp(2rem, 5vw, 3.5rem);
 		color: var(--theme-text);
 	}
@@ -59,6 +58,7 @@ import { GitStarPromoSection } from './Promo/GitStarPromoSection/GitStarPromoSec
 
 	body {
 		--theme-text: white;
+		font-family: 'ReemKufiInk', sans-serif;
 	}
 </style>
 
