--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -102,6 +102,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		font: inherit;
 		color: inherit;
 		margin: 0;
+		font-family: 'Inter', sans-serif;	
 	}
 
 	.nav-wrapper {
