Feat: change font to Nunito and Inter
to improve visual clarity

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -102,7 +102,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 		font: inherit;
 		color: inherit;
 		margin: 0;
-		font-family: 'Inter', sans-serif;	
+		font-family: var(--font-special);	
 	}
 
 	.nav-wrapper {
