--- a/src/components/LandingPage/Comparison/ComparisonCard.astro
+++ b/src/components/LandingPage/Comparison/ComparisonCard.astro
@@ -42,6 +42,7 @@ const { name, downside, icon }: Props = Astro.props
 		margin: 0;
 		font-size: 1.8rem;
 		font-weight: bold;
+		font-family: var(--font-special);
 	}
 
 	.icon {
