--- a/src/components/LandingPage/DocsBtn.astro
+++ b/src/components/LandingPage/DocsBtn.astro
@@ -39,6 +39,7 @@ const css = `docs-btn ${classes ? classes : 'test'}`
 		flex: 1;
 		white-space: nowrap;
 		transition: cubic-bezier(0.17, 0.67, 0.11, 0.98) 0.3s 0.2s;
+		font-family: var(--font-special);
 	}
 	.docs-btn:hover {
 		box-shadow: rgba(0, 0, 0, 0.23) 0 2px 5px, rgb(255, 255, 255) 0 4px 0;
