--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -59,7 +59,11 @@ import { GitStarPromoSection } from './Promo/GitStarPromoSection/GitStarPromoSec
 
 	body {
 		--theme-text: white;
-		font-family: 'ReemKufiInk', sans-serif;
+		font-family: var(--font-serious);
+	}
+
+	h1,h2,h3,h4,h5 {
+		font-family: var(--font-special);
 	}
 </style>
 
