Feat: shorten phrasing in docs button implementations on landing page
to improve clarity

--- a/src/components/LandingPage/LandingPageEndingCTA.astro
+++ b/src/components/LandingPage/LandingPageEndingCTA.astro
@@ -5,7 +5,7 @@ import DocsBtn from './DocsBtn.astro'
 <div class='root'>
 	<div class='text'>
 		<h2>Are you ready to learn?</h2>
-		<DocsBtn title='Docs page' href='/introduction' text='Go to the docs' />
+		<DocsBtn title='Docs page' href='/introduction' text='Get Started' />
 	</div>
 	<div class='bottom-grad' aria-hidden='true'></div>
 </div>
