--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -6,7 +6,7 @@ import DocsBtn from '../DocsBtn.astro'
 	<DocsBtn
 		title='bewebdev.tech docs'
 		href='/introduction'
-		text='Get to the docs'
+		text='Get Started'
 	/>
 	<DocsBtn
 		title='bewebdev.tech GitHub'
