--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -116,6 +116,40 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			}
 
 			.main-section {
+				@keyframes fadeInDown {
+					0% {
+						opacity: 0;
+						transform: translateY(-1.25em);
+					}
+					100% {
+						opacity: 1;
+						transform: translateY(0);
+					}
+				}
+				details[open] {
+					animation-name: fadeInDown;
+					animation-duration: 0.5s;
+				}
+				details {
+					summary {
+						transition: 0.2s;
+						padding: 10px;
+						border-radius: 8px;
+
+						user-select: none;
+						&:hover {
+							background-color: var(--theme-text-accent);
+							color: var(--theme-bg);
+							cursor: pointer;
+						}
+					}
+
+					&[open] {
+						summary {
+							margin-bottom: 10px;
+						}
+					}
+				}
 				a:visited {
 					color: var(--theme-text-accent-visited);
 				}
