--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,8 +1,8 @@
 :root {
 	--font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
 		sans-serif, Apple Color Emoji, Segoe UI Emoji;
-	--font-serious: 'Inter', 'sans-serif';
-	--font-special: 'Nunito', 'sans-serif';
+	` --font-serious: 'Inter', sans-serif;
+	--font-special: 'Nunito', sans-serif;
 	--font-body: system-ui, var(--font-fallback);
 	--font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono',
 		'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono',
