Chore: add gtag

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -28,3 +28,16 @@ import '../styles/index.css'
 		root.classList.remove('theme-dark')
 	}
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src='https://www.googletagmanager.com/gtag/js?id=G-76TJGCMRYN'
+></script>
+<script is:inline>
+	window.dataLayer = window.dataLayer || []
+	function gtag() {
+		dataLayer.push(arguments)
+	}
+	gtag('js', new Date())
+
+	gtag('config', 'G-76TJGCMRYN')
+</script>
