Perf: add partytown and use it on gtag script
to delay the gtag script execution to improve performance score

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -30,7 +30,9 @@ import '../styles/index.css'
 </script>
 
 <!-- Google tag (gtag.js) -->
-<script async src='https://www.googletagmanager.com/gtag/js?id=G-76TJGCMRYN'
+<script
+	type='text/partytown'
+	src='https://www.googletagmanager.com/gtag/js?id=G-76TJGCMRYN'
 ></script>
 <script is:inline>
 	window.dataLayer = window.dataLayer || []
