Revert "Use gtag with partytown"

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -30,9 +30,7 @@ import '../styles/index.css'
 </script>
 
 <!-- Google tag (gtag.js) -->
-<script
-	type='text/partytown'
-	src='https://www.googletagmanager.com/gtag/js?id=G-76TJGCMRYN'
+<script async src='https://www.googletagmanager.com/gtag/js?id=G-76TJGCMRYN'
 ></script>
 <script is:inline>
 	window.dataLayer = window.dataLayer || []
