--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,13 +1,14 @@
 ---
-import HeadCommon from '../components/HeadCommon.astro'
-import HeadSEO from '../components/HeadSEO.astro'
-import Header from '../components/Header/Header.astro'
-import PageContent from '../components/PageContent/PageContent.astro'
-import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro'
-import RightSidebar from '../components/RightSidebar/RightSidebar.astro'
-import * as CONFIG from '../config'
 import type { MarkdownHeading } from 'astro'
 import Footer from '../components/Footer/Footer.astro'
+import HeadCommon from '../components/HeadCommon.astro'
+import Header from '../components/Header/Header.astro'
+import HeadSEO from '../components/HeadSEO.astro'
+import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro'
+import PageContent from '../components/PageContent/PageContent.astro'
+import RightSidebar from '../components/RightSidebar/RightSidebar.astro'
+import * as CONFIG from '../config'
+import CopyCodeToClipboard from './CopyCodeToClipboard.astro'
 
 type Props = {
 	frontmatter: CONFIG.Frontmatter
@@ -212,5 +213,6 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			</aside>
 		</main>
 		<Footer path={currentFile} />
+		<CopyCodeToClipboard />
 	</body>
 </html>
