--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,8 +7,9 @@ import HeadSEO from '../components/HeadSEO.astro'
 import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro'
 import PageContent from '../components/PageContent/PageContent.astro'
 import RightSidebar from '../components/RightSidebar/RightSidebar.astro'
+import CopyCodeToClipboard from '../components/utility/CopyCodeToClipboard/CopyCodeToClipboard.astro'
+
 import * as CONFIG from '../config'
-import CopyCodeToClipboard from './CopyCodeToClipboard.astro'
 
 type Props = {
 	frontmatter: CONFIG.Frontmatter
