--- a/src/components/LandingPage/Footer/LandingPageFooter.astro
+++ b/src/components/LandingPage/Footer/LandingPageFooter.astro
@@ -11,11 +11,12 @@ import ImageAttribution from './ImageAttribution.astro'
 
 <style>
 	footer {
-		background-color: var(--bewebdev-purple);
+		background-color: var(--theme-bg);
 		color: var(--theme-text);
 		padding: 20px;
 		z-index: var(--overlay-high);
 		position: relative;
+		box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
 	}
 	footer ul {
 		list-style: none;
