--- a/src/components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro
+++ b/src/components/utility/HeadingLinksCopyToClipboard/HeadingLinksCopyToClipboard.astro
@@ -20,6 +20,12 @@
 			width: 42px;
 			height: 42px;
 		}
+		&:has(button:focus-visible) {
+			button.heading-copy {
+				opacity: 1;
+			}
+		}
+
 		&:hover {
 			button.heading-copy {
 				opacity: 1;
