--- a/src/components/LandingPage/WelcomeSection/WelcomeSection.astro
+++ b/src/components/LandingPage/WelcomeSection/WelcomeSection.astro
@@ -1,8 +1,6 @@
 ---
-import MainLinks from './MainLinks.astro';
+import MainLinks from './MainLinks.astro'
 ---
-
-
 
 <div class={`welcome first-join`}>
 	<div class='content'>
@@ -18,7 +16,7 @@ import MainLinks from './MainLinks.astro';
 	/>
 </div>
 
-<style lang="scss">
+<style lang='scss'>
 	.welcome {
 		display: flex;
 		align-items: center;
@@ -50,16 +48,17 @@ import MainLinks from './MainLinks.astro';
 		justify-content: center;
 	}
 
-	@media (prefers-reduced-motion:no-preference) {
+	@media (prefers-reduced-motion: no-preference) {
 		.first-join {
 			--appear-time: 2s;
 
 			.content {
-				animation: 1s slide-appear .5s backwards;
+				animation: 1s slide-appear 0.5s backwards;
 			}
 
 			.puzzle {
-				animation: rotate 200s infinite linear var(--appear-time), rotate-appear var(--appear-time);
+				animation: rotate 200s infinite linear var(--appear-time),
+					rotate-appear var(--appear-time);
 			}
 		}
 	}
@@ -79,7 +78,7 @@ import MainLinks from './MainLinks.astro';
 
 	@keyframes rotate-appear {
 		from {
-			scale: .9;
+			scale: 0.9;
 			rotate: -30deg;
 			opacity: 0;
 			translate: 0 5%;
@@ -100,13 +99,13 @@ import MainLinks from './MainLinks.astro';
 		}
 	}
 
-	@media (max-width: 768px) {
+	@media (max-width: 982px) {
 		.puzzle {
 			opacity: 0.5;
 		}
 	}
 
-	@media (min-width: 768px) {
+	@media (min-width: 982px) {
 		.puzzle {
 			position: relative;
 			width: 500px;
@@ -121,9 +120,9 @@ import MainLinks from './MainLinks.astro';
 <script is:inline>
 	const firstJoin = localStorage.getItem('firstJoin')
 	if (firstJoin === 'false') {
-		const welcomeSection =  document.querySelector('.first-join')
+		const welcomeSection = document.querySelector('.first-join')
 		welcomeSection.classList.remove('first-join')
 	} else {
-		localStorage.setItem('firstJoin','false')
+		localStorage.setItem('firstJoin', 'false')
 	}
 </script>
