--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,14 +7,13 @@
 	--font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono',
 		'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono',
 		'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', Monaco,
-		'Courier New', Courier, monospace;
+		'Courier New', courier, monospace;
 
 	--bewebdev-pink: #f806b0;
 	--bewebdev-pink-saturated: #a31077;
 	--bewebdev-purple: #1c1531;
 	--bewebdev-purple-saturated: #342366;
 	--bewebdev-red: #a4030379;
-
 
 	/*
    * Variables with --color-base prefix define
@@ -127,14 +126,14 @@ body {
 
 	/* @@@: not used anywhere */
 	--theme-text-lighter: hsla(var(--color-gray-40), 1);
-	--theme-bg: #1c1531;
+	--theme-bg: #151f2c;
 	--theme-bg-hover: hsla(var(--color-gray-40), 1);
 	--theme-bg-offset: hsla(var(--color-gray-5), 1);
 	--theme-code-inline-bg: hsla(var(--color-gray-10), 1);
 	--theme-code-inline-text: hsla(var(--color-base-white), 100%, 1);
 	--theme-code-bg: hsla(var(--color-gray-5), 1);
 	--theme-code-text: hsla(var(--color-base-white), 100%, 1);
-	--theme-navbar-bg: #1c1531;
+	--theme-navbar-bg: var(--theme-bg);
 	--theme-selection-color: hsla(var(--color-base-white), 100%, 1);
 	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
 
