--- a/src/components/LandingPage/WelcomeSection/MainLinks.astro
+++ b/src/components/LandingPage/WelcomeSection/MainLinks.astro
@@ -4,14 +4,15 @@ import DocsBtn from '../DocsBtn.astro'
 
 <div class='links'>
 	<DocsBtn
+		gradient
 		title='bewebdev.tech docs'
 		href='/introduction'
-		text='Get Started'
+		text='Start learning'
 	/>
 	<DocsBtn
 		title='bewebdev.tech GitHub'
 		href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
-		text='Repository'
+		text='Source Code'
 		isExternal
 		classes='repo'
 	/>
