--- a/src/components/LandingPage/Comparison/ComparisonCard.astro
+++ b/src/components/LandingPage/Comparison/ComparisonCard.astro
@@ -26,11 +26,7 @@ const { name, downside, icon }: Props = Astro.props
 	}
 
 	li {
-		background-image: linear-gradient(
-			45deg,
-			var(--bewebdev-pink-saturated),
-			var(--bewebdev-purple-saturated)
-		);
+		background: var(--comparison-card-bg);
 		padding: 1rem;
 		border-radius: 1rem;
 		box-shadow: 0 2.8px 2.8px rgba(0, 0, 0, 0.034),
