--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -38,7 +38,7 @@ const currentPage = Astro.url.pathname
 			),
 			radial-gradient(
 				circle at 15% 15%,
-				var(--bewebdev-pink) 0%,
+				var(--circle-gradient-color) 0%,
 				var(--theme-bg) 70%
 			);
 		overflow-x: hidden;
