--- a/src/components/LandingPage/Promo/GitStarPromoSection/GitStarPromoSection.module.css
+++ b/src/components/LandingPage/Promo/GitStarPromoSection/GitStarPromoSection.module.css
@@ -1,67 +1,67 @@
 .root {
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-bottom: 3rem;
-  width: min(100%, 90vw);
-  min-height: 60vh;
-  display: grid;
-  place-items: center;
-  position: relative;
-  z-index: var(--z-base);
+	max-width: 1200px;
+	margin: 0 auto;
+	margin-bottom: 3rem;
+	width: min(100%, 90vw);
+	min-height: 60vh;
+	display: grid;
+	place-items: center;
+	position: relative;
+	z-index: var(--z-base);
 }
 
 .textContainer {
-  z-index: var(--z-floating-base);
-  position: relative;
+	z-index: var(--z-floating-base);
+	position: relative;
 }
 
 .sectionTitle {
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 2rem;
-  transition: text-shadow 0.5s;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 2rem;
+	transition: text-shadow 0.5s;
 }
 
 .button {
-  --hover: var(--theme-bg);
+	--hover: var(--docs-btn-text);
 
-  font-size: 1.3rem;
-  background-color: var(--docs-btn-bg);
-  color: var(--hover);
-  padding: 0 2rem;
-  border-radius: 8px;
-  text-decoration: none;
-  width: fit-content;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
-  transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
-  font-family: var(--font-special);
-  font-weight: bold;
+	font-size: 1.3rem;
+	background-color: var(--docs-btn-bg);
+	color: var(--hover);
+	padding: 0 2rem;
+	border-radius: 8px;
+	text-decoration: none;
+	width: fit-content;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-items: center;
+	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
+	font-family: var(--font-special);
+	font-weight: bold;
 }
 
 .button .textInButton {
-  padding: 1rem 0;
+	padding: 1rem 0;
 }
 
 .button:hover,
 .button:focus {
-  animation: pulse 0.8s;
-  box-shadow: 0 0 2em 2em rgb(255 255 255 / 0%);
-  scale: 0.95;
+	animation: pulse 0.8s;
+	box-shadow: 0 0 2em 2em rgb(255 255 255 / 0%);
+	scale: 0.95;
 }
 
 @keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--gold-color);
-  }
+	0% {
+		box-shadow: 0 0 0 0 var(--gold-color);
+	}
 }
 
 .separator {
-  background-color: var(--hover);
-  width: 1px;
-  height: 2.3rem;
-  display: block;
-  transition: background-color 0.2s ease-in-out;
+	background-color: var(--hover);
+	width: 1px;
+	height: 2.3rem;
+	display: block;
+	transition: background-color 0.2s ease-in-out;
 }
